fix: align everything

--- a/public/assets/js/components/header/header.css
+++ b/public/assets/js/components/header/header.css
@@ -2,22 +2,31 @@
   position: sticky;
   top: 0;
   z-index: 1000;
-  display: flex;
-  align-items: center;
   width: 100%;
   height: 100px;
-  padding: 0 120px;
   background: #fff;
   border-bottom: 1px solid #d9d9d9;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+.header__inner {
+  display: grid;
+  grid-template-columns: 240px 630px 290px;
+  column-gap: 24px;
+  align-items: center;
+  width: max-content;
+  min-width: 1458px;
+  height: 100%;
+  padding: 0 120px;
   box-sizing: border-box;
 }
 
 .header__logo-link {
   display: inline-flex;
   align-items: center;
-  flex-shrink: 0;
+  justify-self: start;
   text-decoration: none;
-  transform: translateX(-10px);
 }
 
 .header__logo {
@@ -28,20 +37,15 @@
   filter: drop-shadow(0 4px 4px rgb(0 0 0 / 25%));
 }
 
-.header__left-filler {
-  width: 108px;
-  flex-shrink: 0;
-  align-self: stretch;
-}
-
 .header__search-box {
   display: flex;
   align-items: center;
   gap: 10px;
+  justify-self: start;
   width: 341px;
   height: 40px;
+  margin-left: 5px;
   padding: 0 26px;
-  flex-shrink: 0;
   box-sizing: border-box;
   border-radius: 10px;
   background: var(--color-search-bg);
@@ -57,8 +61,9 @@
   background: transparent;
   color: var(--color-input-text);
   font-family: var(--font-main);
-  font-style: normal;
   font-size: var(--text-input-size);
+  font-style: normal;
+  font-weight: var(--text-input-weight);
   line-height: normal;
   letter-spacing: var(--text-input-letter-spacing);
 }
@@ -69,29 +74,21 @@
   font-size: var(--text-input-size);
   font-style: normal;
   font-weight: var(--text-input-weight);
-  line-height: var(--text-input-line);
+  line-height: normal;
   letter-spacing: var(--text-input-letter-spacing);
-}
-
-.header__right-filler {
-  flex: 1 0 0;
-  align-self: stretch;
 }
 
 .header__user {
   display: flex;
+  width: 300px;
+  padding-left: 20px;
   align-items: center;
+  justify-content: flex-end;
   gap: 15px;
-  flex-shrink: 0;
+  box-sizing: border-box;
 }
 
 .header__username {
-  display: flex;
-  width: 300px;
-  height: 56px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
   color: #000;
   text-align: right;
   font-family: Inter, Arial, sans-serif;
