--- a/public/assets/js/components/widgetbar/widgetbar.css
+++ b/public/assets/js/components/widgetbar/widgetbar.css
@@ -1,9 +1,9 @@
 .widgetbar {
   display: flex;
+  width: 280px;
   flex-direction: column;
-  justify-content: center;
   align-items: flex-start;
-  gap: 10px;
+  gap: 16px;
   box-sizing: border-box;
 }
 
